# TreeCalc

./: .gitignore  Cargo.toml  Dockerfile  run.sh
src/: main.rs  main_min_pk.rs  main_min_sig.rs  tree_calc.rs
src/calculation/: distributions.rs  main_min_pk.rs  main_min_sig.rs  mod.rs  tree_calc.rs
src/simulation/: depth_based_internal_aggregator.rs  first_internal_aggregator.rs  leaf_aggregator.rs  leaf_node.rs  main.rs  mod.rs  simulator.rs  validator.rs
