[package]
name = "tree"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.12"
rand = "0.8"
rand_core = "0.6.0"
rand_chacha = "0.3.1"
hex = "0.4.3"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"

hmac = "0.12"
sha2 = "0.10"
dashmap = "6.1.0"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5.15"
async-channel = "2.3.1"
bytes = "1.10.1"
bit-vec = "0.8.0"
fxhash = "0.2.1"
rayon = "1.10.0"
borsh = "1.5.7"
once_cell = "1.21.3"
statrs = "0.18.0"
randomkit = "0.1.1"
get_if_addrs = "0.5.3"